--- a/pages/ui-checkbox.html
+++ b/pages/ui-checkbox.html
@@ -34,12 +34,16 @@
       </li>
       <li>
         shape - static (optional). Default: rounded.<br>
-        Sets the corner style.<br>
-        Available options: rounded, circle, square.
+        Available options: rounded, circle, square.<br>
+        Sets the corner style.
       </li>
       <li>
         size - static (optional). Default: small.<br>
-        Available options: x-small, small, medium.
+        Available options: small, medium, large.
+      </li>
+      <li>
+        color - static (optional). Default: default.<br>
+        Specifies the color scheme.
       </li>
     </ul>
   </div>
@@ -68,18 +72,18 @@
     <div>Size</div>
     <div class="example">
       <div class="preview">
-        <ui-checkbox size="x-small"></ui-checkbox>
         <ui-checkbox size="small"></ui-checkbox>
         <ui-checkbox size="medium"></ui-checkbox>
+        <ui-checkbox size="large"></ui-checkbox>
       </div>
       <div class="toolbar">
         <span>HTML</span>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-checkbox size="x-small"&gt;&lt;/ui-checkbox&gt;</div>
           <div>&lt;ui-checkbox size="small"&gt;&lt;/ui-checkbox&gt;</div>
           <div>&lt;ui-checkbox size="medium"&gt;&lt;/ui-checkbox&gt;</div>
+          <div>&lt;ui-checkbox size="large"&gt;&lt;/ui-checkbox&gt;</div>
         </code>
       </div>
     </div>
