--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -23,36 +23,36 @@
     <h2>Attributes</h2>
     <ul>
       <li>
-        type - static (init-only), optional. Default: text.<br>
+        type - static (init-only, optional). Default: text.<br>
         Specifies the input type. Update via property: component.type = 'email'.
       </li>
       <li>
-        value - static (init-only), optional.<br>
+        value - static (init-only, optional).<br>
         Sets the current value of the input. Update via property: component.value = 'Value'.
       </li>
       <li>
-        placeholder - static (init-only), optional.<br>
+        placeholder - static (init-only, optional).<br>
         Text displayed when the input is empty. Update via property: component.placeholder = 'Placeholder'.
       </li>
       <li>
-        clearable - static, optional.<br>
+        clearable - static (optional).<br>
         Adds a clear button to the input.
       </li>
       <li>
-        required - reactive, optional. Default: false.<br>
+        required - reactive (optional). Default: false.<br>
         Indicates whether the input is required.
       </li>
       <li>
-        disabled - reactive, optional. Default: false.<br>
+        disabled - reactive (optional). Default: false.<br>
         Controls the disabled state of the component.
       </li>
       <li>
-        size - static, optional. Default: medium.<br>
-        Available values: small, medium, large.
+        size - static (optional). Default: medium.<br>
+        Available options: small, medium, large.
       </li>
-      <li>
-        shape - static, optional. Default: rounded.<br>
-        Sets the corner style: rounded, pill, or square.
+      <li>shape - static (optional). Default: rounded.<br>
+        Available options: rounded, pill, sharp.<br>
+        Sets the corner style.
       </li>
     </ul>
   </div>
