--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -29,8 +29,8 @@
         Available options: small, medium, large.
       </li>
       <li>shape - static (optional). Default: rounded.<br>
-        Sets the corner style.<br>
-        Available options: rounded, pill, sharp, circle.
+        Available options: rounded, pill, sharp, circle.<br>
+        Sets the corner style.
       </li>
       <li>color - static (optional). Default: default.<br>
         Specifies the color scheme.
