--- a/pages/ui-select.html
+++ b/pages/ui-select.html
@@ -12,10 +12,10 @@
     <h2>Attributes</h2>
     <ul>
       <li>
-        text - reactive, optional. The default text or value to display. If not provided, a hyphen ("-") is shown.
+        text - reactive (optional). The default text or value to display. If not provided, a hyphen ("-") is shown.
       </li>
       <li>
-        icon-combobox - reactive, optional. Default: arrow-down-small.
+        icon-combobox - reactive (optional). Default: arrow-down-small.
       </li>
     </ul>
   </div>
