--- a/pages/ui-textarea.html
+++ b/pages/ui-textarea.html
@@ -38,8 +38,8 @@
       </li>
       <li>
         shape - static (optional). Default: rounded.<br>
-        Sets the corner style.<br>
-        Available options: rounded, square.
+        Available options: rounded, square.<br>
+        Sets the corner style.
       </li>
     </ul>
   </div>
