--- a/pages/ui-switch.html
+++ b/pages/ui-switch.html
@@ -59,9 +59,9 @@
     <div>Sizes</div>
     <div class="example">
       <div class="preview">
-        <ui-switch size="x-small"></ui-switch>
         <ui-switch size="small"></ui-switch>
         <ui-switch size="medium"></ui-switch>
+        <ui-switch size="large"></ui-switch>
       </div>
       <div class="toolbar">
         <span>HTML</span>
