--- a/pages/ui-checkbox.html
+++ b/pages/ui-checkbox.html
@@ -3,11 +3,16 @@
   <div class="description">Checkboxes allow users to select multiple items from a list or toggle a single option on or off.</div>
   <ui-divider></ui-divider>
   <div class="info">
-    <h2>Features</h2>
+    <h2>Usage</h2>
     <ul>
       <li>
-        A visible outline appears when the component is focused.
+        More customization options can be added via the CSS file.
       </li>
+    </ul>
+  </div>
+  <div class="info">
+    <h2>Features</h2>
+    <ul>
       <li>
         Supports keyboard navigation: Tab to move, Enter/Space to trigger action.
       </li>
@@ -38,12 +43,12 @@
         Sets the corner style.
       </li>
       <li>
-        size - static (optional). Default: small.<br>
-        Available options: small, medium, large.
+        size - static (optional). Default: default.<br>
+        Specifies the component's size (extendable via CSS).
       </li>
       <li>
         color - static (optional). Default: default.<br>
-        Specifies the color scheme.
+        Specifies the component's color scheme (extendable via CSS).
       </li>
     </ul>
   </div>
@@ -63,27 +68,6 @@
       <div class="code">
         <code>
           <div>&lt;ui-checkbox&gt;&lt;/ui-checkbox&gt;</div>
-        </code>
-      </div>
-    </div>
-  </div>
-
-  <div class="content-item">
-    <div>Size</div>
-    <div class="example">
-      <div class="preview">
-        <ui-checkbox size="small"></ui-checkbox>
-        <ui-checkbox size="medium"></ui-checkbox>
-        <ui-checkbox size="large"></ui-checkbox>
-      </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
-        <code>
-          <div>&lt;ui-checkbox size="small"&gt;&lt;/ui-checkbox&gt;</div>
-          <div>&lt;ui-checkbox size="medium"&gt;&lt;/ui-checkbox&gt;</div>
-          <div>&lt;ui-checkbox size="large"&gt;&lt;/ui-checkbox&gt;</div>
         </code>
       </div>
     </div>
