--- a/pages/ui-checkbox.html
+++ b/pages/ui-checkbox.html
@@ -6,7 +6,7 @@
     <h2>Usage</h2>
     <ul>
       <li>
-        More customization options can be added via the CSS file.
+        More customization options can be added via the CSS.
       </li>
     </ul>
   </div>
@@ -26,12 +26,12 @@
         If used outside of the <a href="#ui-field">field</a> component, the aria-label must be set manually.
       </li>
       <li>
-        checked - reactive (optional).<br>
-        Controls the checked state of the component.
-      </li>
-      <li>
         required - static (optional).<br>
         Indicates whether the component is required.
+      </li>
+      <li>
+        checked - reactive (optional).<br>
+        Controls the checked state of the component.
       </li>
       <li>
         disabled - reactive (optional).<br>
