--- a/pages/ui-checkbox.html
+++ b/pages/ui-checkbox.html
@@ -26,15 +26,15 @@
         If used outside of the <a href="#ui-field">field</a> component, the aria-label must be set manually.
       </li>
       <li>
-        required - static (optional).<br>
+        required - static (optional). Default: false.<br>
         Indicates whether the component is required.
       </li>
       <li>
-        checked - reactive (optional).<br>
+        checked - reactive (optional). Default: false.<br>
         Controls the checked state of the component.
       </li>
       <li>
-        disabled - reactive (optional).<br>
+        disabled - reactive (optional). Default: false.<br>
         Controls the disabled state of the component.
       </li>
       <li>
