--- a/pages/ui-switch.html
+++ b/pages/ui-switch.html
@@ -17,19 +17,19 @@
     <h2>Attributes</h2>
     <ul>
       <li>
-        aria-label - static required.<br>
+        aria-label - static (required).<br>
         If used outside of the <a href="#ui-field">field</a> component, the aria-label must be set manually.
       </li>
       <li>
-        checked - reactive, required. Default: false.<br>
+        checked - reactive (required). Default: false.<br>
         Controls the checked state of the component.
       </li>
       <li>
-        required - static, optional.<br>
+        required - static (optional).<br>
         Indicates whether the component is required.
       </li>
       <li>
-        disabled - reactive, optional.<br>
+        disabled - reactive (optional).<br>
         Controls the disabled state of the component.
       </li>
     </ul>
@@ -43,25 +43,6 @@
     <div class="example">
       <div class="preview">
         <ui-switch></ui-switch>
-      </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
-        <code>
-          <div>&lt;ui-switch&gt;&lt;/ui-switch&gt;</div>
-        </code>
-      </div>
-    </div>
-  </div>
-
-  <div class="content-item">
-    <div>Sizes</div>
-    <div class="example">
-      <div class="preview">
-        <ui-switch size="small"></ui-switch>
-        <ui-switch size="medium"></ui-switch>
-        <ui-switch size="large"></ui-switch>
       </div>
       <div class="toolbar">
         <span>HTML</span>
