--- a/pages/ui-field.html
+++ b/pages/ui-field.html
@@ -38,7 +38,7 @@
 <section class="content">
 
   <div class="content-item">
-    <div>Default</div>
+    <div>Mininmal</div>
     <div class="example">
       <div class="preview">
         <ui-field>
@@ -61,29 +61,6 @@
   </div>
 
   <div class="content-item">
-    <div>Passive, non-clickable label</div>
-    <div class="example">
-      <div class="preview">
-        <ui-field>
-          <ui-label passive>Label</ui-label>
-          <ui-switch></ui-switch>
-        </ui-field>
-      </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
-        <code>
-          <div>&lt;ui-field&gt;</div>
-            <div>&nbsp;&nbsp;&lt;ui-label passive&gt;Label&lt;/ui-label&gt;</div>
-            <div>&nbsp;&nbsp;&lt;ui-switch&gt;&lt;/ui-switch&gt;</div>
-          <div>&lt;/ui-field&gt;</div>
-        </code>
-      </div>
-    </div>
-  </div>
-
-  <div class="content-item">
     <div>label-position="end"</div>
     <div class="example">
       <div class="preview">
@@ -99,6 +76,29 @@
         <code>
           <div>&lt;ui-field label-position="end"&gt;</div>
             <div>&nbsp;&nbsp;&lt;ui-label&gt;Label&lt;/ui-label&gt;</div>
+            <div>&nbsp;&nbsp;&lt;ui-switch&gt;&lt;/ui-switch&gt;</div>
+          <div>&lt;/ui-field&gt;</div>
+        </code>
+      </div>
+    </div>
+  </div>
+
+  <div class="content-item">
+    <div>Passive, non-clickable label</div>
+    <div class="example">
+      <div class="preview">
+        <ui-field>
+          <ui-label passive>Label</ui-label>
+          <ui-switch></ui-switch>
+        </ui-field>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-field&gt;</div>
+            <div>&nbsp;&nbsp;&lt;ui-label passive&gt;Label&lt;/ui-label&gt;</div>
             <div>&nbsp;&nbsp;&lt;ui-switch&gt;&lt;/ui-switch&gt;</div>
           <div>&lt;/ui-field&gt;</div>
         </code>
