--- a/pages/ui-switch.html
+++ b/pages/ui-switch.html
@@ -6,9 +6,6 @@
     <h2>Features</h2>
     <ul>
       <li>
-        A visible outline appears on focused buttons.
-      </li>
-      <li>
         Supports keyboard navigation: Tab to move, Enter/Space to trigger action.
       </li>
     </ul>
@@ -31,6 +28,14 @@
       <li>
         disabled - reactive (optional).<br>
         Controls the disabled state of the component.
+      </li>
+      <li>
+        size - static (optional). Default: default.<br>
+        Specifies the component's size (extendable via CSS).
+      </li>
+      <li>
+        color - static (optional). Default: default.<br>
+        Specifies the component's color scheme (extendable via CSS).
       </li>
     </ul>
   </div>
