--- a/pages/ui-textarea.html
+++ b/pages/ui-textarea.html
@@ -25,10 +25,6 @@
         Text displayed when the textarea is empty. Update via property: component.placeholder = 'Placeholder'.
       </li>
       <li>
-        height - static (optional). Default: 40.<br>
-        Component height is measured in pixels. Recommended range: 24 to 40. Even values are preferred.
-      </li>
-      <li>
         required - static (optional).<br>
         Defines whether the component is required.
       </li>
@@ -40,6 +36,14 @@
         shape - static (optional). Default: rounded.<br>
         Available options: rounded, square.<br>
         Sets the corner style.
+      </li>
+      <li>
+        size - static (optional). Default: default.<br>
+        Specifies the component's size (extendable via CSS).
+      </li>
+      <li>
+        color - static (optional). Default: default.<br>
+        Specifies the component's color scheme (extendable via CSS).
       </li>
     </ul>
   </div>
