--- a/pages/ui-textarea.html
+++ b/pages/ui-textarea.html
@@ -6,8 +6,8 @@
     <h2>Usage</h2>
     <ul>
       <li>
-        Static init-only attributes are removed from the custom element itself immediately after initialization. This is done to prevent confusion and avoid conflicts between attributes and properties during the component lifecycle. Their values are still applied to the relevant internal elements, so the component's behavior remains consistent with the initial configuration.<br><br>
-        To update these values dynamically, use the corresponding JavaScript properties on the component instance.
+        Static init-only attributes are removed from the custom element itself immediately after initialization.<br>
+        To update these values dynamically, use the corresponding properties on the component instance.
       </li>
     </ul>
   </div>
@@ -45,11 +45,50 @@
         color - static (optional). Default: default.<br>
         Specifies the component's color scheme (extendable via CSS).
       </li>
+      <li>
+        width-mode="full" - static (optional).<br>
+        Expands the component to take up 100% of the available width.
+      </li>
     </ul>
   </div>
 </section>
 
 <section class="content">
+
+  <div class="content-item">
+    <div>Minimal</div>
+    <div class="example">
+      <div class="preview">
+        <ui-textarea></ui-textarea>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-textarea&gt;&lt;/ui-textarea&gt;</div>
+        </code>
+      </div>
+    </div>
+  </div>
+
+  <div class="content-item">
+    <div>Full Width</div>
+    <div class="example">
+      <div class="preview">
+        <ui-textarea width-mode="full"></ui-textarea>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-textarea width-mode="full"&gt;&lt;/ui-textarea&gt;</div>
+        </code>
+      </div>
+    </div>
+  </div>
+
   <div class="content-item">
     <div>Shape (default: rounded)</div>
     <div class="example">
@@ -62,7 +101,7 @@
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-textarea&gt;&lt;/ui-textarea&gt;</div>
+          <div>&lt;ui-textarea shape="rounded"&gt;&lt;/ui-textarea&gt;</div>
           <div>&lt;ui-textarea shape="square"&gt;&lt;/ui-textarea&gt;</div>
         </code>
       </div>
