--- a/pages/ui-divider.html
+++ b/pages/ui-divider.html
@@ -32,6 +32,10 @@
         Available options: horizontal, vertical.<br>
         Defines the divider direction.
       </li>
+      <li>
+        color - static (optional). Default: default.<br>
+        Specifies the component's color scheme (extendable via CSS).
+      </li>
     </ul>
   </div>
 </section>
