--- a/pages/ui-select.html
+++ b/pages/ui-select.html
@@ -27,7 +27,7 @@
     <div>Default</div>
     <div class="example">
       <div class="preview">
-        <ui-select></ui-select>
+        <ui-select id="id1"></ui-select>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -44,7 +44,7 @@
     <div>text="Select"</div>
     <div class="example">
       <div class="preview">
-        <ui-select text="Select"></ui-select>
+        <ui-select text="Select" id="id2"></ui-select>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -58,3 +58,8 @@
   </div>
 
 </section>
+
+<script>
+document.getElementById('id1').options = ['ID1_Первый','ID1_Второй','ID1_Третий'];
+document.getElementById('id2').options = ['ID2_Первый','ID2_Второй','ID2_Третий'];
+</script>
