--- a/pages/ui-select.html
+++ b/pages/ui-select.html
@@ -60,6 +60,6 @@
 </section>
 
 <script>
-document.getElementById('id1').options = ['ID1_Первый','ID1_Второй','ID1_Третий'];
-document.getElementById('id2').options = ['ID2_Первый','ID2_Второй','ID2_Третий'];
+document.getElementById('id1').items = ['ID1_1_Text','ID1_2_Text','ID1_3_Text'];
+document.getElementById('id2').items = ['ID2_1_Text','ID2_2_Text','ID2_3_Text'];
 </script>
