--- a/pages/ui-select.html
+++ b/pages/ui-select.html
@@ -60,6 +60,6 @@
 </section>
 
 <script>
-document.getElementById('id1').items = ['ID1_1_Text','ID1_2_Text','ID1_3_Text'];
+document.getElementById('id1').items = ['ID1_1_Text1111111111111111111','ID1_2_Text','ID1_3_Text'];
 document.getElementById('id2').items = ['ID2_1_Text','ID2_2_Text','ID2_3_Text'];
 </script>
