--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -196,10 +196,10 @@
       <div class="preview">
         <ui-button>
           <ui-icon icon="home"></ui-icon>
-          Button
+          <span>Button</span>
         </ui-button>
         <ui-button>
-          Button
+          <span>Button</span>
           <ui-icon icon="article"></ui-icon>
         </ui-button>
       </div>
