--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -228,7 +228,7 @@
       <div class="preview">
         <ui-button>
           <ui-icon icon="article"></ui-icon>
-          Button
+          <span>Button</span>
           <ui-icon icon="send"></ui-icon>
         </ui-button>
       </div>
@@ -251,7 +251,7 @@
     <div>Adding Loading state.</div>
     <div class="example">
       <div class="preview">
-        <ui-button id="clickMe" onclick="load()" onkeydown="load()" aria-label="Click me">Click me</ui-button>
+        <ui-button id="clickMe" onclick="load()" onkeydown="load()" aria-label="Start Loading">Start Loading</ui-button>
         <ui-button onclick="reset(event)" onkeydown="reset(event)" aria-label="Reset">Reset</ui-button>
       </div>
       <div class="toolbar">
@@ -259,7 +259,7 @@
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button loading&gt;Click me&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button loading&gt;Start Loading&lt;/ui-button&gt;</div>
         </code>
       </div>
     </div>
