--- a/pages/ui-checkbox.html
+++ b/pages/ui-checkbox.html
@@ -6,7 +6,7 @@
     <h2>Usage</h2>
     <ul>
       <li>
-        More customization options can be added via the CSS.
+        Additional customization options can be applied via CSS.
       </li>
     </ul>
   </div>
