--- a/pages/ui-divider.html
+++ b/pages/ui-divider.html
@@ -5,8 +5,12 @@
   <div class="info">
     <h2>Usage</h2>
     <ul>
-      <li>Any content added inside the component should be wrapped in a &lt;span&gt; to ensure proper rendering.</li>
-      <li>When using non-text content (e.g., icons or custom elements), additional CSS may be required to ensure correct styling.</li>
+      <li>
+        Any content added inside the component should be wrapped in a &lt;span&gt; to ensure proper rendering.
+      </li>
+      <li>
+        When using non-text content (e.g., icons or custom elements), additional CSS may be required to ensure correct styling.
+      </li>
     </ul>
   </div>
   <div class="info">
