--- a/pages/ui-select.html
+++ b/pages/ui-select.html
@@ -3,6 +3,14 @@
   <div class="description">A Select is a component that lets the user choose a single option from a list of multiple choices..</div>
   <ui-divider></ui-divider>
   <div class="info">
+    <h2>Usage</h2>
+    <ul>
+      <li>
+        Additional customization options can be applied via CSS.
+      </li>
+    </ul>
+  </div>
+  <div class="info">
     <h2>Features</h2>
     <ul>
       <li>.</li>
