--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -14,9 +14,6 @@
       <li>
         When the button includes multiple elements, text content must be wrapped in a &lt;span&gt; for consistent styling.
       </li>
-      <li>
-        To make the button square, use aspect-ratio="1/1".
-      </li>
     </ul>
   </div>
   <div class="info">
@@ -48,10 +45,6 @@
         Sets the corner style.
       </li>
       <li>
-        aspect-ratio="1/1" - static (optional).<br>
-        Makes the component square using a 1:1 aspect ratio.
-      </li>
-      <li>
         width-mode="full" - static (optional).<br>
         Expands the component to take up 100% of the available width.
       </li>
@@ -66,23 +59,7 @@
     <div class="example">
       <div class="preview">
         <ui-button>Button</ui-button>
-      </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
-        <code>
-          <div>&lt;ui-button&gt;Button&lt;/ui-button&gt;</div>
-        </code>
-      </div>
-    </div>
-  </div>
-
-  <div class="content-item">
-    <div>Icon Only, Aspect Ratio 1/1</div>
-    <div class="example">
-      <div class="preview">
-        <ui-button aspect-ratio="1/1">
+        <ui-button>
           <ui-icon icon="settings"></ui-icon>
         </ui-button>
       </div>
@@ -91,7 +68,9 @@
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button aspect-ratio="1/1"&gt;</div>
+          <div>&lt;ui-button&gt;Button&lt;/ui-button&gt;</div>
+          <br>
+          <div>&lt;ui-button&gt;</div>
           <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
           <div>&lt;/ui-button&gt;</div>
         </code>
@@ -140,17 +119,17 @@
   </div>
 
   <div class="content-item">
-    <div>Icon-Only, Different Shapes, Aspect Ratio 1/1</div>
+    <div>Icon-Only, Different Shapes</div>
     <div class="example">
       <div class="preview">
-        <ui-button shape="rounded" aspect-ratio="1/1">
-          <ui-icon icon="settings"></ui-icon>
+        <ui-button shape="rounded">
+          <ui-icon icon="article"></ui-icon>
         </ui-button>
-        <ui-button shape="circle" aspect-ratio="1/1">
-          <ui-icon icon="settings"></ui-icon>
+        <ui-button shape="circle">
+          <ui-icon icon="article"></ui-icon>
         </ui-button>
-        <ui-button shape="square" aspect-ratio="1/1">
-          <ui-icon icon="settings"></ui-icon>
+        <ui-button shape="square">
+          <ui-icon icon="article"></ui-icon>
         </ui-button>
       </div>
       <div class="toolbar">
@@ -158,36 +137,17 @@
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button shape="rounded" aspect-ratio="1/1"&gt;</div>
+          <div>&lt;ui-button shape="rounded"&gt;</div>
           <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
           <div>&lt;/ui-button&gt;</div>
           <br>
-          <div>&lt;ui-button shape="circle" aspect-ratio="1/1"&gt;</div>
+          <div>&lt;ui-button shape="circle"&gt;</div>
           <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
           <div>&lt;/ui-button&gt;</div>
           <br>
-          <div>&lt;ui-button shape="square" aspect-ratio="1/1"&gt;</div>
+          <div>&lt;ui-button shape="square"&gt;</div>
           <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
           <div>&lt;/ui-button&gt;</div>
-        </code>
-      </div>
-    </div>
-  </div>
-
-  <div class="content-item">
-    <div>Disabled</div>
-    <div class="example">
-      <div class="preview">
-        <ui-button disabled>
-          Button
-        </ui-button>
-      </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
-        <code>
-          <div>&lt;ui-button disabled&gt;Button&lt;/ui-button&gt;</div>
         </code>
       </div>
     </div>
@@ -213,11 +173,11 @@
         <code>
           <div>&lt;ui-button&gt;</div>
           <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
-          <div>&nbsp;Button</div>
+          <div>&nbsp;&lt;span&gt;Button&lt;/span&gt;</div>
           <div>&lt;/ui-button&gt;</div>
           <br>
           <div>&lt;ui-button&gt;</div>
-          <div>&nbsp;Button</div>
+          <div>&nbsp;&lt;span&gt;Button&lt;/span&gt;</div>
           <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
           <div>&lt;/ui-button&gt;</div>
         </code>
@@ -245,6 +205,25 @@
           <div>&nbsp;&lt;span&gt;Button&lt;/span&gt;</div>
           <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
           <div>&lt;/ui-button&gt;</div>
+        </code>
+      </div>
+    </div>
+  </div>
+
+  <div class="content-item">
+    <div>Disabled</div>
+    <div class="example">
+      <div class="preview">
+        <ui-button disabled>
+          Button
+        </ui-button>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-button disabled&gt;Button&lt;/ui-button&gt;</div>
         </code>
       </div>
     </div>
