--- a/pages/ui-select.html
+++ b/pages/ui-select.html
@@ -23,7 +23,7 @@
         text - reactive (optional). The default text or value to display. If not provided, a hyphen ("-") is shown.
       </li>
       <li>
-        icon-combobox - reactive (optional). Default: arrow-down-small.
+        icon - static (init-only, optional). Default: arrow-down-small.
       </li>
     </ul>
   </div>
