--- a/pages/ui-select.html
+++ b/pages/ui-select.html
@@ -1,12 +1,12 @@
 <section class="intro">
   <h1>Select</h1>
-  <div class="description">A Select is a component that lets the user choose a single option from a list of multiple choices..</div>
+  <div class="description">A Select is a component that lets the user choose a single option from a list of multiple choices.</div>
   <ui-divider></ui-divider>
   <div class="info">
     <h2>Usage</h2>
     <ul>
       <li>
-        Additional customization options can be applied via CSS.
+        
       </li>
     </ul>
   </div>
@@ -19,6 +19,10 @@
   <div class="info">
     <h2>Attributes</h2>
     <ul>
+      <li>
+        aria-label - static (required).<br>
+        If used outside of the <a href="#ui-field">field</a> component, the aria-label must be set manually.
+      </li>
       <li>
         text - reactive (optional). The default text or value to display. If not provided, a hyphen ("-") is shown.
       </li>
