--- a/pages/ui-select.html
+++ b/pages/ui-select.html
@@ -72,6 +72,15 @@
 </section>
 
 <script>
-document.getElementById('id1').items = ['ID1_1_Text1111111111111111111','ID1_2_Text','ID1_3_Text'];
-document.getElementById('id2').items = ['ID2_1_Text','ID2_2_Text','ID2_3_Text'];
+document.getElementById('id1').items = [
+  { value: '1', label: 'ID1_Option_111111111111111111111111', selected: true, disabled: false },
+  { value: '2', label: 'ID1 Option 2', selected: false, disabled: true },
+  { value: '3', label: 'ID1 Option 3', selected: false, disabled: false },
+];
+
+document.getElementById('id2').items = [
+  { value: '1', label: 'ID2 Option 1', selected: true, disabled: false },
+  { value: '2', label: 'ID2 Option 2', selected: false, disabled: true },
+  { value: '3', label: 'ID2 Option 3', selected: false, disabled: false },
+];
 </script>
