--- a/pages/ui-select.html
+++ b/pages/ui-select.html
@@ -24,8 +24,8 @@
         If used outside of the <a href="#ui-field">field</a> component, the aria-label must be set manually.
       </li>
       <li>
-        text - reactive (optional). Default: "-".<br>
-        The default text or value to display.
+        placeholder - static (optional). Default: "-".<br>
+        Static text to display when no item is selected.
       </li>
       <li>
         icon - static (init-only, optional). Default: arrow-down-small.
