--- a/pages/ui-select.html
+++ b/pages/ui-select.html
@@ -54,7 +54,7 @@
   </div>
 
   <div class="content-item">
-    <div>placeholder="Select"</div>
+    <div>With Placeholder and Disabled option</div>
     <div class="example">
       <div class="preview">
         <ui-select placeholder="Select" id="id2"></ui-select>
@@ -93,7 +93,7 @@
 document.getElementById('id1').items = [
   { value: '1', label: 'ID1_Option_111111111111111111111111', selected: true, disabled: false },
   { value: '2', label: 'ID1 Option 2', selected: false, disabled: false },
-  { value: '3', label: 'ID1 Option 3', selected: false, disabled: true },
+  { value: '3', label: 'ID1 Option 3', selected: false, disabled: false },
 ];
 
 document.getElementById('id2').items = [
