--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         <div class="nav-category" data-nav-category="forms">
           <div class="menuTitle">Forms</div>
         </div>
+  <!-- accordion, tabs, breadcrumb,  -->
+        <div class="nav-category" data-nav-category="components">
+          <div class="menuTitle">Components</div>
+        </div>
   <!-- portal, observer, resize-handler, mount-detector -->
         <div class="nav-category" data-nav-category="utilities">
           <div class="menuTitle">Utilities</div>
