--- a/ui/ui-portal/ui-portal.html
+++ b/ui/ui-portal/ui-portal.html
@@ -1,12 +1,12 @@
 <section class="intro">
-  <h1>Focus</h1>
-  <div class="description">A root-level DOM node used to capture focus.</div>
+  <h1>Portal</h1>
+  <div class="description">A root-level DOM node for modals, overlays, and dialogs.</div>
   <ui-divider></ui-divider>
   <div class="info">
     <h2>Usage</h2>
     <ul>
       <li>
-        Place right after the opening &lt;body&gt; tag.
+        Place just before the closing &lt;/body&gt; tag.
       </li>
     </ul>
   </div>
@@ -14,7 +14,7 @@
     <h2>Features</h2>
     <ul>
       <li>
-        Remains invisible and non-interactive to prevent unexpected focus jumps.
+        Ensures the component is outside the main document flow, avoids z-index conflicts, and guarantees that modals, overlays, and dialogs render above all other content.
       </li>
     </ul>
   </div>
@@ -30,8 +30,8 @@
       <div class="code">
         <code>
           <div>&lt;body&gt;</div>
-          <div>&nbsp;&lt;ui-focus&gt;&lt;/ui-focus&gt;</div>
-          <div>&nbsp;&lt;!-- Remaining code --&gt;</div>
+          <div>&nbsp;&lt;!-- Preceding code --&gt;</div>
+          <div>&nbsp;&lt;ui-portal&gt;&lt;/ui-portal&gt;</div>
           <div>&lt;/body&gt;</div>
         </code>
       </div>
